@startuml

title __ANDROIDASSIGNMENTS's Class Diagram__\n

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow {
        ~ chat : ArrayList<String>
        ~ listView : ListView
        ~ messageBox : EditText
        ~ send : Button
        + send()
        # onCreate()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ChatWindow.ChatAdapter {
        - context : Context
        - lst : ArrayList<String>
        - source : int
        + ChatAdapter()
        + getCount()
        + getItem()
        + getView()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.ListItemsActivity {
        {static} # ACTIVITY_NAME : String
        ~ currentPhotoPath : String
        {static} - TAKE_PICTURE : int
        - imageUri : Uri
        + OnCheckChanged()
        + onActivityResult()
        + openCamera()
        + setOnCheckedChanged()
        + toaster()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        - createImageFile()
        - dispatchTakePictureIntent()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.LoginActivity {
        {static} # ACTIVITY_NAME : String
        {static} + isEmpty()
        {static} + isValidEmail()
        + onLogin()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  namespace com.example.androidassignments {
    class com.example.androidassignments.MainActivity {
        {static} # ACTIVITY_NAME : String
        + onActivityResult()
        + openList()
        + startChat()
        + toaster()
        # onCreate()
        # onDestroy()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
    }
  }
  

  com.example.androidassignments.ChatWindow -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.ChatWindow o-- com.example.androidassignments.ChatWindow.ChatAdapter : adapter
  com.example.androidassignments.ChatWindow +-down- com.example.androidassignments.ChatWindow.ChatAdapter
  com.example.androidassignments.ChatWindow.ChatAdapter -up-|> android.widget.ArrayAdapter
  com.example.androidassignments.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignments.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
